ctdb-client: transaction_cancel must free transaction handle

BUG: https://bugzilla.samba.org/show_bug.cgi?id=12122

Signed-off-by: Amitay Isaacs <amitay@gmail.com>
Reviewed-by: Martin Schwenke <martin@meltin.net>
(cherry picked from commit 8aa00035faeb307c061dc20e62a0ace7f2a1413b)